# soe

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  check_clang_format.py  check_clang_tidy.py  install_libs.py
.circleci/: config.yml
cmake/: test_target.cmake
config/: CMakeLists.txt  config.cpp  config.test.cpp
doc/master/: _r_e_a_d_m_e_8md.html  annotated.html  bind__front_8h.html  bind__front_8h__dep__incl.map  bind__front_8h__dep__incl.md5  bind__front_8h__incl.map  bind__front_8h__incl.md5  bind__front_8h_source.html  bind__front_8test_8cpp.html  bind__front_8test_8cpp__incl.map  bind__front_8test_8cpp__incl.md5  bind__front_8test_8cpp_source.html  classes.html  config_2main_8test_8cpp.html  config_2main_8test_8cpp__incl.map  config_2main_8test_8cpp__incl.md5  config_2main_8test_8cpp_source.html  config_8cpp.html  config_8cpp__incl.map  config_8cpp__incl.md5  config_8cpp_source.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  config_8test_8cpp.html  config_8test_8cpp__incl.map  config_8test_8cpp__incl.md5  config_8test_8cpp_source.html  consume__queue_8h.html  consume__queue_8h__dep__incl.map  consume__queue_8h__dep__incl.md5  consume__queue_8h__incl.map  consume__queue_8h__incl.md5  consume__queue_8h_source.html  dir_000000_000001.html  dir_000000_000003.html  dir_000000_000004.html  (+396 more)
doc/master/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+36 more)
libsoe/: CMakeLists.txt  flow_reformat.cu  flow_to_map.cu  frame_stream.cpp  frame_stream_cuda.cpp  picture.cpp
libsoe/include/soe/: farneback_settings.h  flow_kernels.h  flow_to_map.h  frame.h  frame_stream.h  frame_stream_cuda.h  picture.h
soe/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  bind_front.test.cpp  config.cpp  config.test.cpp  exception.cpp  paths.cpp  rand.cpp  scope_exit.test.cpp  thread_pool.cpp  thread_pool.test.cpp
utils/include/utils/: bind_front.h  config.h  consume_queue.h  exception.h  paths.h  rand.h  scope_exit.h  shared_handle.h  thread_pool.h  unique_ptr_cast.h  vec.h
vcpkg_config/ports/opencv/: 0001-fix-paths.patch  0002-fix-paths-linux.patch  0003-fix-compilation.patch  CONTROL  FFMPEGConfig.cmake  FindFFMPEG.cmake  portfile.cmake
vcpkg_config/triplets/: x64-windows.cmake
